--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <li class="nav-item mt-3 mt-lg-0 ms-lg-3 d-lg-none d-xl-inline-block"><a class="btn btn-primary" href="user-add-0.html">Sign in</a></li>
+              <li class="nav-item mt-3 mt-lg-0 ms-lg-3 d-lg-none d-xl-inline-block"><a class="btn btn-primary" href="login.html">Sign in</a></li>
             </ul>
           </div>
         </div>
