--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
             </form>
 
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item dropdown"><a class="nav-link active" id="homeDropdownMenuLink" href="index.html" aria-haspopup="true" aria-expanded="false">
+              <li class="nav-item dropdown"><a class="nav-link " id="homeDropdownMenuLink" href="index.html" aria-haspopup="true" aria-expanded="false">
                    Home</a>
                    <!--
                 <div class="dropdown-menu" aria-labelledby="homeDropdownMenuLink"><a class="dropdown-item" href="index.html">Rooms</a><a class="dropdown-item" href="index-2.html">Restaurants</a><a class="dropdown-item" href="index-3.html">Travel</a><a class="dropdown-item" href="index-4.html">Real Estate <span class="badge badge-info-light ms-1 mt-n1">New</span></a></div>
@@ -65,11 +65,11 @@
 
               
               <!-- /Megamenu end-->
-              <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a>
+              <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <li class="nav-item mt-3 mt-lg-0 ms-lg-3 d-lg-none d-xl-inline-block"><a class="btn btn-primary" href="user-add-0.html">Sign in</a></li>
+              <li class="nav-item mt-3 mt-lg-0 ms-lg-3 d-lg-none d-xl-inline-block"><a class="btn btn-primary" href="login.html">Sign in</a></li>
             </ul>
           </div>
         </div>
