Color pallette update

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         </div>
       </div>
       <div class="container py-6 py-md-7 text-white z-index-20">
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-xl-10">
-            <div class="text-center text-lg-start">
+            <div class="text-center pb-5">
               <h1 class="display-3-hero fw-bold text-shadow">Create your moments of greatness</h1>
             </div>
             <div class="search-bar mt-5 p-3 p-lg-1 ps-lg-4">
@@ -221,7 +221,7 @@
       </div>
     </section>
     <section>
-      <div class="container">
+      <div class="container p-3">
           <div class="text-center pb-lg-4" style="padding-top: 2rem;">
           <p class="subtitle text-secondary">ON SALE</p>
           <h2 class="mb-5">Race of the week: Great Ethiopian Run 2022</h2>
@@ -270,7 +270,7 @@
 
                 </div>
 
-              <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-bullets-dynamic" style="width: 80px;"><span class="swiper-pagination-bullet swiper-pagination-bullet-active-prev" style="left: 0px;" tabindex="0" role="button" aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active swiper-pagination-bullet-active-main" style="left: 0px;" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active-next" style="left: 0px;" tabindex="0" role="button" aria-label="Go to slide 3"></span></div>
+              <div class="swiper-pagination  swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-bullets-dynamic" style="width: 80px;"><span class="swiper-pagination-bullet swiper-pagination-bullet-active-prev" style="left: 0px;" tabindex="0" role="button" aria-label="Go to slide 1"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active swiper-pagination-bullet-active-main" style="left: 0px;" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active-next" style="left: 0px;" tabindex="0" role="button" aria-label="Go to slide 3"></span></div>
             <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span><span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div><div class="container bg-gray-100 py-6-ad px-3 px-lg-5 rounded-3 shadow-sm">
         <div class="row">
           <div class="col-lg-6-ad mb-5 mb-lg-0 text-center text-lg-start" style="padding: 2.5rem;">
